--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="light_gray">#FFEEEEEE</color>
+    <color name="dark_red">#FF800000</color>
+    <color name="dark_green">#FF008000</color>
 </resources>
