--- a/app/src/main/res/layout/fragment_pay_debt.xml
+++ b/app/src/main/res/layout/fragment_pay_debt.xml
@@ -11,36 +11,12 @@
     android:paddingRight="@dimen/fragment_horizontal_margin"
     android:paddingBottom="@dimen/fragment_vertical_margin">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:src="@drawable/ic_money" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Debt"
-            android:textSize="24sp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="{Name} owes me / You owe {Name}"/>
-
     <TextView
         android:id="@+id/tvDebt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
+        android:gravity="center"
         android:text="$100"/>
 
     <TextView
@@ -48,21 +24,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
+        android:gravity="center"
         android:text="by 1-1-2022"/>
 
-    <TextView
-        android:id="@+id/tvPaid"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/etPayAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:text="$50 paid so far"/>
-
-    <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="He let me borrow his Car. (Recurring)"/>
+        android:hint="Pay Amount"
+        app:prefixText="$ "
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,19 +54,12 @@
             android:layout_weight="1"
             android:text="Pay" />
         <Button
-            android:id="@+id/btnRemove"
+            android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Remove" />
-        <Button
-            android:id="@+id/btnClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:text="Close" />
+            android:text="Cancel" />
     </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
